views: flip focus ring bounds for checkbox and radiobutton

Bug: 847746
Change-Id: Ic7096b63241419da315a6fe21d85459c6723c266
Reviewed-on: https://chromium-review.googlesource.com/1078945
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563216}
Former-commit-id: 7e49b57b9722f6ae3022156f3344ca5f419ddb00